fix image and directions alignment

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -300,6 +300,11 @@ label {
   margin-bottom: 1em;
 }
 
+.recipe-img {
+  max-width: 90%;
+  height:auto;
+}
+
 .recipe-instructions {
   margin: 0 auto;
   padding: 0 0 35px;
